Near final touch
Former-commit-id: 2a6b6426a2502dd0744d009f401cfe87ed21a2b3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -384,7 +384,7 @@ endif()
 # 
 
 # Strip debug symbols
-if(NOT DEBUG AND NOT ANDROID)
+if(NOT DEBUG AND NOT ANDROID AND NOT WEB)
 	message("-- Striping debug symbols")
 
 	if(APPLE)
