Fix mem leaks and start doing ubsan
Former-commit-id: 953bb73dc5a3c49b40797a80418881e469279ff0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,7 @@ elseif(EMSCRIPTEN)
 
 	set(CMAKE_EXECUTABLE_SUFFIX .js) # Making javascript from C++ :sunglasses:
 	configure_file(cmake/index.html.in ${CMAKE_BINARY_DIR}/index.html)
+message("-- Building for web, did you unset your env vals? \"unset CXXFLAGS CXX CPPFLAGS CC CFLAGS LDFLAGS\"")
 else()
 	set(BUILD_NAME ${PROJECT_NAME})
 endif()
@@ -479,6 +480,6 @@ if(LEAK STREQUAL ON)
 endif()
 if(UNDEFINED STREQUAL ON)
 	message("-- Undefined sanitizer enabled")
-	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -DADDRESS -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
-	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -g -O0)
+	target_compile_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -coverage -g -fno-omit-frame-pointer -O0 -fno-optimize-sibling-calls)
+	target_link_options(${BUILD_NAME} PRIVATE -fsanitize=undefined -coverage -g -O0)
 endif()
