Start of 2D actors
Former-commit-id: 6d8c3a1249d2bbb5cf3790b4eb4428056ac4dd5d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ src/components/drawComponent.cpp
 src/components/meshComponent.cpp
 src/components/modelComponent.cpp
 src/components/movementComponent.cpp
+src/components/inputComponent.cpp
 
 src/opengl/cubemap.cpp
 src/opengl/mesh.cpp
@@ -78,6 +79,7 @@ include/components/drawComponent.hpp
 include/components/meshComponent.hpp
 include/components/modelComponent.hpp
 include/components/movementComponent.hpp
+include/components/inputComponent.hpp
 
 include/opengl/cubemap.hpp
 include/opengl/mesh.hpp
