--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ src/components/meshComponent.cpp
 src/components/modelComponent.cpp
 src/components/movementComponent.cpp
 src/components/inputComponent.cpp
+src/components/sprite2DComponent.cpp
 
 src/opengl/cubemap.cpp
 src/opengl/mesh.cpp
@@ -80,6 +81,7 @@ include/components/meshComponent.hpp
 include/components/modelComponent.hpp
 include/components/movementComponent.hpp
 include/components/inputComponent.hpp
+include/components/sprite2DComponent.hpp
 
 include/opengl/cubemap.hpp
 include/opengl/mesh.hpp
